tests/m1/negative/match_expression_non_enum.ax
module match_expression_non_enum;

fn main() -> i32 {
    return match 1 {
        Missing_zero => 0,
    };
}
